--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -188,6 +188,15 @@
                     <property name="column_spacing">10</property>
                     <property name="row_spacing">10</property>
                     <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
                       <object class="GtkLabel" id="oss_label_input_dev2">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -236,7 +245,7 @@
                         <signal name="changed" handler="on_combobox_input_architecture_changed" swapped="no"/>
                         <child internal-child="entry">
                           <object class="GtkEntry" id="combobox-entry4">
-                            <property name="can_focus">False</property>
+                            <property name="can_focus">True</property>
                           </object>
                         </child>
                       </object>
@@ -270,15 +279,6 @@
                       <packing>
                         <property name="y_options"/>
                       </packing>
-                    </child>
-                    <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <placeholder/>
                     </child>
                   </object>
                   <packing>
@@ -517,14 +517,14 @@
                             <property name="can_focus">False</property>
                             <property name="margin_top">5</property>
                             <property name="hexpand">True</property>
-                            <property name="row_spacing">2</property>
-                            <property name="column_spacing">6</property>
+                            <property name="row_spacing">8</property>
+                            <property name="column_spacing">8</property>
                             <child>
                               <object class="GtkLabel" id="label36">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xpad">20</property>
-                                <property name="label" translatable="yes">From</property>
+                                <property name="label" translatable="yes">Minimum note</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
@@ -537,7 +537,7 @@
                               <object class="GtkLabel" id="label37">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">To</property>
+                                <property name="label" translatable="yes">Maimum note</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
@@ -547,27 +547,9 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkEntry" id="min_frequency">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">Minimum frequency that can be recognized by the tuner, It can either be a quantity (in Hz), or a string with the note name defined in the scale tab, specifying the octave with a number (e.g. 'E2', 'A1', etc)</property>
-                                <property name="hexpand">True</property>
-                                <property name="invisible_char">●</property>
-                                <property name="text" translatable="yes">(E2) 86.2</property>
-                                <property name="xalign">1</property>
-                              </object>
-                              <packing>
-                                <property name="left_attach">1</property>
-                                <property name="top_attach">0</property>
-                                <property name="width">1</property>
-                                <property name="height">1</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkLabel" id="label39">
+                              <object class="GtkLabel" id="label6">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="xpad">20</property>
                                 <property name="label" translatable="yes">Hz</property>
                               </object>
                               <packing>
@@ -578,7 +560,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label40">
+                              <object class="GtkLabel" id="label21">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">Hz</property>
@@ -591,13 +573,41 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkEntry" id="max_frequency">
+                              <object class="GtkComboBoxText" id="minimum_frequency">
                                 <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">Maximum frequency that can be recognized by the tuner, It can either be a quantity (in Hz), or a string with the note name defined in the scale tab, specifying the octave with a number (e.g. 'E (4)', 'B# (3)', etc)</property>
-                                <property name="invisible_char">●</property>
-                                <property name="text" translatable="yes">(E4) 440.0</property>
-                                <property name="xalign">1</property>
+                                <property name="can_focus">False</property>
+                                <property name="wrap_width">3</property>
+                                <property name="has_entry">True</property>
+                                <property name="entry_text_column">0</property>
+                                <property name="id_column">1</property>
+                                <child internal-child="entry">
+                                  <object class="GtkEntry" id="comboboxtext-entry6">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="invisible_char">●</property>
+                                    <property name="xalign">1</property>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="top_attach">0</property>
+                                <property name="width">1</property>
+                                <property name="height">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="maximum_frequency">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="model">liststore5</property>
+                                <property name="has_entry">True</property>
+                                <child internal-child="entry">
+                                  <object class="GtkEntry" id="combobox-entry7">
+                                    <property name="can_focus">False</property>
+                                    <property name="invisible_char">●</property>
+                                  </object>
+                                </child>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -605,6 +615,15 @@
                                 <property name="width">1</property>
                                 <property name="height">1</property>
                               </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
                             </child>
                           </object>
                         </child>
@@ -1428,6 +1447,11 @@
       <!-- column-name item -->
       <column type="gchararray"/>
     </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">A4 &lt;440.0&gt;</col>
+      </row>
+    </data>
   </object>
   <object class="GtkListStore" id="liststore2">
     <columns>
@@ -1463,5 +1487,19 @@
       <!-- column-name item -->
       <column type="gchararray"/>
     </columns>
+  </object>
+  <object class="GtkListStore" id="liststore5">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+      <!-- column-name gchararray2 -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">E1</col>
+        <col id="1" translatable="yes">E2</col>
+      </row>
+    </data>
   </object>
 </interface>
