--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -512,7 +512,7 @@
                         <property name="can_focus">False</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkGrid" id="grid1">
+                          <object class="GtkGrid" id="grid_frequencies">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="margin_top">5</property>
@@ -575,8 +575,8 @@
                             <child>
                               <object class="GtkComboBoxText" id="minimum_frequency">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="wrap_width">3</property>
+                                <property name="can_focus">True</property>
+                                <property name="wrap_width">6</property>
                                 <property name="has_entry">True</property>
                                 <property name="entry_text_column">0</property>
                                 <property name="id_column">1</property>
@@ -597,15 +597,20 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkComboBox" id="maximum_frequency">
+                              <object class="GtkComboBoxText" id="maximum_frequency">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="model">liststore5</property>
+                                <property name="wrap_width">6</property>
+                                <property name="active">4</property>
                                 <property name="has_entry">True</property>
+                                <property name="entry_text_column">0</property>
+                                <property name="id_column">1</property>
                                 <child internal-child="entry">
-                                  <object class="GtkEntry" id="combobox-entry7">
-                                    <property name="can_focus">False</property>
+                                  <object class="GtkEntry" id="comboboxtext-entry9">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
                                     <property name="invisible_char">●</property>
+                                    <property name="xalign">1</property>
                                   </object>
                                 </child>
                               </object>
@@ -615,15 +620,6 @@
                                 <property name="width">1</property>
                                 <property name="height">1</property>
                               </packing>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
                             </child>
                           </object>
                         </child>
