--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -680,7 +680,7 @@
                     <property name="id_column">1</property>
                     <child internal-child="entry">
                       <object class="GtkEntry" id="comboboxtext-entry10">
-                        <property name="can_focus">False</property>
+                        <property name="can_focus">True</property>
                       </object>
                     </child>
                   </object>
